Decorate Friends Screen

--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,7 +2,9 @@
 	display: flex;
 	justify-content: space-between;
 	padding: 5px 3px;
-	background-color: var(--green);
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 .status-bar__column:first-child span {
