--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -15,15 +15,19 @@
 	margin-right: 20px;
 }
 
+.user-component__text {
+	margin-left: 10px;
+}
+
 .user-component__title {
 	font-weight: 600;
-	font-size: 23px;
-	margin-left: 10px;
+	font-size: 25px;
 }
 
 .user-component__subtitle {
 	margin-top: 7px;
 	color: rgba(0, 0, 0, 0.3);
+	font-size: 18px;
 }
 
 .user-component__avatar--xl {
@@ -43,4 +47,23 @@
 
 .user-component__column:last-child {
 	color: rgba(0, 0, 0, 0.4);
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+}
+
+.user-component__time {
+	display: block;
+	margin-bottom: 5px;
+}
+
+.badge {
+	background-color: tomato;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	width: 25px;
+	height: 25px;
 }
