--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,6 @@
 .user-component {
 	justify-content: space-between;
+	margin-bottom: 10px;
 }
 
 .user-component,
@@ -12,22 +13,19 @@
 	width: 85px;
 	height: 85px;
 	border-radius: 50%;
-	margin-right: 20px;
-}
-
-.user-component__text {
-	margin-left: 10px;
 }
 
 .user-component__title {
 	font-weight: 600;
 	font-size: 25px;
+	margin-left: 15px;
 }
 
 .user-component__subtitle {
 	margin-top: 7px;
 	color: rgba(0, 0, 0, 0.3);
 	font-size: 18px;
+	margin-left: 15px;
 }
 
 .user-component__avatar--xl {
