--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -16,7 +16,7 @@
 
 .friends-screen__channel {
 	margin-top: 23px;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	border-top: 1px solid var(--border-color);
 	padding-top: 13px;
 }
 
