--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -36,3 +36,76 @@
 	color: rgba(0, 0, 0, 0.4);
 	font-size: 18px;
 }
+.open-chat__header {
+	display: flex;
+	justify-content: space-between;
+	opacity: 0.6;
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+.open-chat__header span {
+	opacity: 0.5;
+}
+.open-post {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.open-post__title {
+	font-weight: 600;
+	margin-bottom: 8px;
+}
+
+.open-post__hashtags {
+	text-transform: uppercase;
+	opacity: 0.4;
+}
+.open-post__members {
+	margin-top: 8px;
+	display: flex;
+	align-items: center;
+}
+.open-post__members img {
+	width: 20px;
+	height: 20px;
+	border: 50%;
+	margin-right: 5px;
+}
+.open-post__memer-count {
+	opacity: 0.4;
+	font-size: 14px;
+}
+.open-post__members .divider {
+	width: 1px;
+	height: 15px;
+	margin: 0 5px;
+	background-color: lightgray;
+}
+.open-post__member-status {
+	background-color: skyblue;
+	color: white;
+	border-radius: px;
+}
+.open-post__photo {
+	position: relative;
+}
+.open-post__photo img {
+	width: 100px;
+	height: 100px;
+	border-radius: 10px;
+}
+.open-post__heart-count {
+	background-color: rgba(0, 0, 0, 0.6);
+	color: white;
+	padding: 5px;
+	border-radius: 20px;
+	display: flex;
+	align-items: center;
+	position: absolute;
+	bottom: 5px;
+	right: 5px;
+}
+.open-post__heart-count span {
+	margin-left: 3px;
+	font-size: 10px;
+}
