--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -71,3 +71,56 @@
 .message-row--own .message__info {
 	flex-direction: row-reverse; /*메세지 <-> 시간*/
 }
+.reply {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	padding: 5px 25px;
+	bottom: 0;
+	width: 100%;
+	background-color: rgba(245, 248, 250);
+	box-sizing: border-box;
+}
+.reply .reply__column:first-child {
+	width: 5%;
+}
+.reply .reply__column:last-child {
+	width: 95%;
+}
+.reply__column {
+	position: relative;
+}
+.reply__column:last-child > i,
+.reply button {
+	position: absolute;
+	right: -18px;
+	top: 4px;
+}
+.reply__column:last-child > i {
+	right: 20px;
+	top: 19px;
+}
+.reply input {
+	padding: 10px;
+	width: 100%;
+	border: 1px solid var(--border-color);
+	border-radius: 20px;
+}
+.reply i {
+	opacity: 0.6;
+}
+.reply__column button i {
+	opacity: 1;
+}
+.reply__column button {
+	background-color: var(--green);
+	border: none;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+}
+.reply__column button:focus,
+.reply__column button:active {
+	outline: none;
+}
