--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,5 +1,5 @@
 #chat-screen {
-	height: 1100vh;
+	height: 500vh;
 }
 #chat-screen .status-bar {
 	z-index: 2;
@@ -14,11 +14,22 @@
 	top: 10px;
 	z-index: 1;
 }
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to {
+		opacity: 1;
+		transform: none;
+	}
+}
 .main-chat {
 	margin-top: 110px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	animation: fadeIn 0.5s linear;
 }
 .chat__timestamp {
 	color: black;
@@ -123,4 +134,7 @@
 .reply__column button:focus,
 .reply__column button:active {
 	outline: none;
+}
+.reply:focus-within .reply__column:first-child {
+	display: none;
 }
