--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -88,3 +88,22 @@
 	margin-left: 3px;
 	font-size: 10px;
 }
+
+@keyframes heartBeat {
+	0% {
+		color: white;
+		transform: none;
+	}
+	50% {
+		color: tomato;
+		transform: scale(1.5);
+	}
+	100% {
+		color: white;
+		transform: none;
+	}
+}
+.open-post__heart-count:hover i {
+	will-change: transform; /*help browser*/
+	animation: heartBeat 1s linear infinite;
+}
